src/codegen-c/snapshots/simpl__codegen__compile__test__compile_if.snap
---
source: src/codegen/compile.rs
expression: compiled
---
#include "prelude.h"

int main (int argc, char** argv) {
    (true) ? (1) : (0);
    return 0;
}
