src/codegen-c/snapshots/simpl__codegen__compile__test__compile_lit.snap
---
source: src/codegen/compile.rs
expression: compiled
---
#include "prelude.h"

int main (int argc, char** argv) {
    5;
    return 0;
}
